base/voice-bot/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: voice-bot
spec:
  replicas: 3
  revisionHistoryLimit: 3

  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 50
        - pause: {}
        - setWeight: 100

      canaryService: voice-bot-canary
      stableService: voice-bot-stable

      trafficRouting:
        nginx:
          stableIngress: voice-bot-ingress

  selector:
    matchLabels:
      app: voice-bot

  template:
    metadata:
      labels:
        app: voice-bot

    spec:
      containers:
        - name: voice-bot
          image: dbag34/voice-bot-rollout:blue
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
